fix layout bug / remove extra imports

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -66,6 +66,11 @@ body {
     outline: none !important;
     outline-offset: none !important;
   }
+
+  &:active {
+    outline: none !important;
+    outline-offset: none !important;
+  }
 }
 
 .btn-yellow {
